# Monocle3-python

./: README.md  mkdocs.yml  pyproject.toml
docs/: api.md  index.md
monocle3/: __init__.py  _accessors.py  _batchelor.py  _clustering_cpp.py  _download.py  _registry.py  _utils.py  alignment.py  cluster_cells.py  cluster_genes.py  datasets.py  expr_models.py  find_markers.py  graph_test.py  label_transfer.py  learn_graph.py  nearest_neighbors.py  order_cells.py  plotting.py  plotting_3d.py  preprocess.py  projection.py  reduce_dimensions.py
monocle3/_biobabel/: package.yaml  skill.md
monocle3/_biobabel/examples/: smoke.py
monocle3/_biobabel/functions/: aggregate_gene_expression.yaml  align_cds.yaml  cluster_cells.yaml  clusters.yaml  coefficient_table.yaml  compare_models.yaml  detect_genes.yaml  estimate_size_factors.yaml  evaluate_fits.yaml  find_gene_modules.yaml  fit_models.yaml  fix_missing_cell_labels.yaml  generate_garnett_marker_file.yaml  graph_test.yaml  learn_graph.yaml  load_cao_l2.yaml  load_packer_embryo.yaml  make_nn_index.yaml  model_predictions.yaml  new_cell_data_set.yaml  normalized_counts.yaml  order_cells.yaml  partitions.yaml  plot_cells.yaml  plot_cells_3d.yaml  plot_genes_by_group.yaml  plot_genes_in_pseudotime.yaml  plot_genes_violin.yaml  plot_pc_variance_explained.yaml  plot_percent_cells_positive.yaml  preprocess_cds.yaml  preprocess_transform.yaml  principal_graph.yaml  pseudotime.yaml  reduce_dimension.yaml  reduce_dimension_transform.yaml  search_nn_index.yaml  search_nn_matrix.yaml  set_cds_nn_index.yaml  size_factors.yaml  (+2 more)
monocle3/_biobabel/recipes/: basic_trajectory.py
monocle3/_biobabel/workflows/: basic_trajectory.yaml  batch_corrected_trajectory.yaml  de_along_pseudotime.yaml
tests/: _fixtures.py  conftest.py  test_alignment.py  test_cluster_cells.py  test_clustering_cpp.py  test_datasets.py  test_expr_models.py  test_graph_test.py  test_learn_graph.py  test_nearest_neighbors.py  test_plotting.py  test_preprocess.py  test_reduce_dimensions.py
tutorials/: c_elegans_L2_v2.ipynb  c_elegans_embryo_v2.ipynb
