[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monocle3-python"
version = "1.4.26"
description = "Python port of the R monocle3 package (tracks cole-trapnell-lab/monocle3 1.4.26 @ 4f4239a) — AnnData-based single-cell trajectory, clustering, and differential expression."
readme = "README.md"
requires-python = ">=3.10"
license = "Artistic-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Jeffery Liu", email = "jeffliu.lucky@gmail.com" },
]
keywords = [
    "monocle3",
    "monocle",
    "single-cell",
    "scRNA-seq",
    "trajectory",
    "pseudotime",
    "clustering",
    "differential-expression",
    "graph-test",
    "R-port",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "anndata>=0.10",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "patsy>=0.5",
    "python-igraph>=0.10",
    "leidenalg>=0.10",
    "umap-learn>=0.5",
    "openTSNE>=1.0",
    "pynndescent>=0.5",
    "hnswlib>=0.8",
    "scanorama>=1.7",
    "plotly>=5.0",
    "ggplot2-python>=4.0.2.9000",
    "ggrepel-python>=0.9.8",
    "pheatmap-python>=1.0.13",
    "scales-python>=1.4.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "build", "twine"]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-jupyter",
]

[project.urls]
Homepage                 = "https://github.com/Bio-Babel/Monocle3-python"
Repository               = "https://github.com/Bio-Babel/Monocle3-python"
Issues                   = "https://github.com/Bio-Babel/Monocle3-python/issues"
Documentation            = "https://github.com/Bio-Babel/Monocle3-python#readme"
"Upstream (R package)"   = "https://github.com/cole-trapnell-lab/monocle3"
"Tutorial data (Zenodo)" = "https://zenodo.org/records/19712460"

[tool.hatch.build.targets.wheel]
packages = ["monocle3"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tutorials/",
    "docs/",
    "tests/",
    "mkdocs.yml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
